[package]
name = "todo-actix"
version = "0.1.0"
authors = ["MICHAELSWONG <mizik_jah@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
serde = { version = "1.0.104", features = ["derive"]}
dotenv = "0.15.0" # read the configuration from a file and load it to the env variables
config = "0.10.1" # can read configuration from different sources